--- a/style.css
+++ b/style.css
@@ -1,12 +1,29 @@
-.cButton{
+body{
+   background-image: url("http://il2.picdn.net/shutterstock/videos/16615927/thumb/1.jpg");
+   no-repeat center center fixed;
+   -webkit-background-size: cover;
+   -moz-background-size: cover;
+   -o-background-size: cover;
+   background-size: cover;
+   background-repeat: no-repeat;
+    background-attachment: fixed;
+}
 
+form{
+  position: absolute;
+  bottom: 43%;
+  left: 10%;
+}
+
+
+.cButton{
 border:none;
 background-color: Transparent;
   margin: 0;
   width:98px;
   height:142px;
       position: absolute;
-      bottom: 60%;
+      bottom: 70%;
       left: 6%;
       background-image: url('c.png');
 
@@ -24,7 +41,7 @@ background-color: Transparent;
   width:150px;
   height:181px;
       position: absolute;
-      bottom: 57.5%;
+      bottom: 67.5%;
       left: 12%;
       background-image: url('h.png');
       -vendor-animation-duration: 3s;
@@ -44,7 +61,7 @@ background-color: Transparent;
   width:96px;
   height:149px;
       position: absolute;
-      bottom: 59%;
+      bottom: 69%;
       left: 22%;
       background-image: url('r.png');
       -vendor-animation-duration: 3s;
@@ -64,7 +81,7 @@ background-color: Transparent;
   width:36px;
   height:142px;
       position: absolute;
-      bottom: 60%;
+      bottom: 70%;
       left: 30%;
       background-image: url('i.png');
       -vendor-animation-duration: 3s;
@@ -84,7 +101,7 @@ background-color: Transparent;
   width:101px;
   height:145px;
       position: absolute;
-      bottom: 59.5%;
+      bottom: 69.5%;
       left: 33%;
       background-image: url('s.png');
       -vendor-animation-duration: 3s;
@@ -97,25 +114,14 @@ background-color: Transparent;
 -webkit-filter: brightness(140%);
 }
 
-
-body{
-   background-image: url("http://il2.picdn.net/shutterstock/videos/16615927/thumb/1.jpg");
-   no-repeat center center fixed;
-   -webkit-background-size: cover;
-   -moz-background-size: cover;
-   -o-background-size: cover;
-   background-size: cover;
-}
-
-
 .vuButton{
   width:300px;
-  height:179px;
+  height:178px;
   background-image: url('vu.png');
   margin: 0;
       position: absolute;
-      bottom: 2%;
-      left: 2%;
+      bottom: 65%;
+    right: 6%;
 
 
 }
@@ -126,8 +132,8 @@ body{
   background-image: url('mario.png');
   margin: 0;
       position: absolute;
-      bottom: 2%;
-      left: 26%;
+      bottom: 37%;
+      right: 6%;
       animation-delay: .5s;
 
 }
@@ -138,19 +144,12 @@ body{
   background-image: url('pres.png');
   margin: 0;
       position: absolute;
-      bottom: 2%;
-      left: 50%;
+      bottom: 9%;
+      right: 6%;
       animation-delay: 1s;
 
 }
-.shruButton{
-  width:300px;
-  height:179px;
-  background-image: url('shru.png');
-  margin: 0;
-      position: absolute;
-      bottom: 2%;
-      left: 74%;
-      animation-delay: 1.5s;
-
+.resume{
+  margin-top: 250px;
+  padding:120px;
 }
