--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ form {
     height: 142px;
     top: 50px;
     left: 70px;
-    background-image: url('c.png');
+    background-image: url('images/c.png');
     position: absolute;
 }
 .cButton:focus {
@@ -38,14 +38,15 @@ form {
     background-color: Transparent;
     margin: 0;
     width: 150px;
-    height: 181px;
-    top: 28px;
+    height: 143px;
+    top: 50px;
     left: 148px;
-    background-image: url('h.png');
+    background-image: url('images/h.png');
     -vendor-animation-duration: 3s;
     animation-delay: .5s;
     -vendor-animation-iteration-count: infinite;
     position: absolute;
+    background-repeat: no-repeat;
 }
 .hButton:focus {
     outline: 0;
@@ -62,11 +63,12 @@ form {
     height: 149px;
     top: 50px;
     left: 279px;
-    background-image: url('r.png');
+    background-image: url('images/r.png');
     -vendor-animation-duration: 3s;
     animation-delay: 1s;
     -vendor-animation-iteration-count: infinite;
     position: absolute;
+    background-repeat: no-repeat;
 }
 .rButton:focus {
     outline: 0;
@@ -83,7 +85,7 @@ form {
     height: 142px;
     left:383px;
     top: 50px;
-    background-image: url('i.png');
+    background-image: url('images/i.png');
     -vendor-animation-duration: 3s;
     animation-delay: 1.5s;
     -vendor-animation-iteration-count: infinite;
@@ -104,7 +106,7 @@ form {
     height: 145px;
     top: 50px;
     left: 425px;
-    background-image: url('s.png');
+    background-image: url('images/s.png');
     -vendor-animation-duration: 3s;
     animation-delay: 2s;
     -vendor-animation-iteration-count: infinite;
