--- a/style.css
+++ b/style.css
@@ -16,15 +16,21 @@ form {
     target-new: tab;
 }
 
-/* Adjust the button container spacing */
+.textMargin {
+    margin-left: 100px;
+    margin-right: 700px;
+    margin-top: 50px;
+}
+
 .button-container {
     display: flex;
     justify-content: left;
     align-items: center;  /* Align buttons vertically */
     width: auto;
-    margin: 0 auto;
-    gap: 0;  /* Remove any extra gap */
-    padding:30px;
+    gap: 0;
+    margin-top:100px;
+    margin-left:100px;
+    margin-bottom:100px;
 }
 
 /* Adjust the button size directly */
@@ -33,8 +39,8 @@ form {
     background-color: Transparent;
     margin: 0;  /* Zero margin to remove spacing between buttons */
     padding: 0; /* Remove any internal padding */
-    width: 70px;  /* Set width */
-    height: 100px;  /* Set height */
+    width: 90px;  /* Set width */
+    height: 120px;  /* Set height */
     background-repeat: no-repeat;
     background-size: contain;  /* Ensure image fits button size */
     background-position: center;  /* Ensure background image is centered */
@@ -49,8 +55,8 @@ form {
     background-color: Transparent;
     margin: 0;  /* Zero margin to remove spacing between buttons */
     padding: 0; /* Remove any internal padding */
-    width: 35px;  /* Set width */
-    height: 100px;  /* Set height */
+    width: 40px;  /* Set width */
+    height: 120px;  /* Set height */
     background-repeat: no-repeat;
     background-size: contain;  /* Ensure image fits button size */
     background-position: center;  /* Ensure background image is centered */
@@ -80,19 +86,11 @@ form {
     background-image: url('images/s.png');
 }
 
-/*.cButton:hover, .hButton:hover, .rButton:hover, .iButton:hover, .sButton:hover {*/
-/*    -webkit-filter: brightness(140%);*/
-/*}*/
-
 .resume {
     margin-top: 250px;
     padding: 120px;
 }
-.textMargin {
-    margin-left: 100px;
-    margin-right: 500px;
-    margin-top: 300px;
-}
+
 
 .sidebar {
     position: fixed;
@@ -181,6 +179,10 @@ form {
     color: #333;
     border: 1px solid #ddd;
     border-radius: 4px;
+}
+
+.heading {
+    font-size: 30px;
 }
 
 
